# princess

./: .gitignore  README.md  notebook.py  princess.py  pyproject.toml  renpy_parser.py
src/princess/: __init__.py  ab_test.py  annotate.py  characters.py  choices.py  cli.py  constants.py  game.py  models.py  parser.py  pipeline.py  text.py  voice.py
src/princess/parsers/: __init__.py
src/princess/tts/: README.md  __init__.py  cli.py  database.py  extractor.py  tts_label.css
src/princess/utils/: __init__.py  characters.py  dialogue.py  file.py  navigation.py  text.py
tests/: test_choices.py  test_parser.py
tests/data/: micro_script.rpy
tests/integration/: test_parser_on_game_files.py
