[project]
name = "princess"
version = "0.1.0"
description = "Utilities for working with Slay the Princess game files"
authors = [
    {name = "banteg", email = ""}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "marimo>=0.11.20",
    "networkx>=3.4.2",
    "parsimonious>=0.10.0",
    "polars>=1.25.2",
    "rich>=13.9.4",
    "ruff>=0.11.0",
    "sqlite-utils>=3.38",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/princess"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"

